@@ -1,5 +1,6 @@
 - Refactor: Cleanup deprecated DepartmentForum
 - Refactor: Cleanup deprecated department argument in TeacherGroup
+- Refactor: Cleanup deprecated Department and Teacher methods
 
 30.8.0 (04-08-2020)
 - Improvement: Simplified curricular rule executors creation
